--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,44 @@
-version: "3.8"
+# Comments are provided throughout this file to help you get started.
+# If you need more help, visit the Docker Compose reference guide at
+# https://docs.docker.com/go/compose-spec-reference/
+
+# Here the instructions define your application as a service called "server".
+# This service is built from the Dockerfile in the current directory.
+# You can add other services your application may depend on here, such as a
+# database or a cache. For examples, see the Awesome Compose repository:
+# https://github.com/docker/awesome-compose
 services:
-  database:
-    container_name: database
-    image: postgres
+  app:
+    container_name: goAddress
+    build:
+      context: .
+      target: final
     ports:
-      - "5432:5432"
+      - 8080:8080
+    env_file:
+      - path: .env
+        required: true
+    depends_on:
+      - postgres
+    networks:
+      - local
+
+  postgres:
+    container_name: postgres
+    image: postgres:latest
+    ports:
+      - 5432:5432
     volumes:
-      - ./database:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=goaddress
-      - POSTGRES_USER=goaddress
-      - POSTGRES_PASSWORD=Gw1}0S8MLsY3
+      - db-data:/var/lib/postgresql/data
+    env_file:
+      - path: .env
+        required: true
+    networks:
+      - local
+
+volumes:
+  db-data:
+
+networks:
+  local:
+    driver: bridge
